# 2stepauth

./: .gitignore  README.md
client/: client.py  run.py
processingcenter/: CMakeLists.txt  test  test.cpp
processingcenter/src/: main.cpp
server/: run.py  test.py  userinfo.db
server/app/: __init__.py  api.py  models.py  resourse.py
terminal/: CMakeLists.txt
terminal/src/: main.c
